--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.3",
+    "nodemailer": "^6.7.2",
     "validator": "^13.7.0"
   }
 }
