--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.25.0",
     "history": "5",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.6",
