--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.25.0",
+    "countries-list": "^2.6.1",
     "history": "5",
     "rc-slider": "^9.7.5",
     "react": "^17.0.2",
