--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.3",
     "nodemailer": "^6.7.2",
+    "stripe": "^8.203.0",
     "validator": "^13.7.0"
   }
 }
