--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.25.0",
     "countries-list": "^2.6.1",
     "history": "5",
+    "mdbreact": "^5.2.0",
     "rc-slider": "^9.7.5",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
